# 15puzzle

./: .clang-tidy  .gitignore  CMakeLists.txt  DisjointDatabase.cbp  Makefile  README.md  debug  main.cpp  run
boards/: 11-reg  15-reg  15-rev  24-reg  8-reg  test-reg  test-rev
databases/: 443-reg  555-reg  555-rev  663-reg  6666-reg  78-reg  8-reg
include/: Board.h  BoardRect.h  Direction.h  DisjointDatabase.h  Idastar-inl.h  Idastar.h  InputParser.h  PartialDatabase.h  Pattern.h  Point.h  State.h  Util.h  WalkingDistance.h  flat_hash_map.h
src/: Board.cpp  BoardRect.cpp  Direction.cpp  DisjointDatabase.cpp  Idastar.cpp  InputParser.cpp  PartialDatabase.cpp  Pattern.cpp  Util.cpp  WalkingDistance.cpp  main.cpp
wbin/: index.html  main.css  main.js
web/: Idastar-inl.h  Idastar.h  wasm.cpp
